Opened 14 years ago

Closed 11 years ago

#2010 closed defect (fixed)

ffplay can't seek in file that vlc and mplayer -demuxer mov can seek

Reported by: gjdfgh Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: seek mov
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

You can't seek in this file with ffplay: https://educast.fccn.pt/vod/clips/1aw3ugmjz0/quicktime.mov

The file plays fine, but attempts to seek print "error while seeking" and cause audio and video to freeze. Observed with ffmpeg git 20899c54f03c4.

mplayer -demuxer mov can seek in this file. (It fails to seek to key frames correctly, but recovers as more video is decoded.) VLC can seek in it as well.

Change History (9)

comment:1 by Carl Eugen Hoyos, 14 years ago

Keywords: seek added

Please add a failing command line together with complete, uncut console output to make this a valid ticket. If the problem is reproducible with ffmpeg, please use a ffmpeg command line, if the problem is only reproducible with ffplay but not ffmpeg, please add ffplay command line and mention that it works fine with ffmpeg.

comment:2 by Carl Eugen Hoyos, 14 years ago

Keywords: mov added

comment:3 by Carl Eugen Hoyos, 13 years ago

Resolution: needs_more_info
Status: newclosed

Please reopen if you can add the missing information.

comment:4 by gjdfgh, 13 years ago

Resolution: needs_more_info
Status: closedreopened
# ffplay quicktime.mov 
ffplay version 1.0.3 Copyright (c) 2003-2012 the FFmpeg developers
  built on Jan 24 2013 14:52:18 with gcc 4.7 (Debian 4.7.2-5)
  configuration: --prefix=/usr --extra-cflags='-g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security ' --extra-ldflags='-Wl,-z,relro' --cc='ccache cc' --enable-shared --enable-libmp3lame --enable-gpl --enable-nonfree --enable-libvorbis --enable-pthreads --enable-libfaac --enable-libxvid --enable-postproc --enable-x11grab --enable-libgsm --enable-libtheora --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libx264 --enable-libspeex --enable-nonfree --disable-stripping --enable-libvpx --enable-libschroedinger --disable-encoder=libschroedinger --enable-version3 --enable-libopenjpeg --enable-librtmp --enable-avfilter --enable-libfreetype --enable-libvo-aacenc --disable-decoder=amrnb --enable-libvo-amrwbenc --enable-libaacplus --libdir=/usr/lib/i386-linux-gnu --disable-vda --enable-libbluray --enable-libcdio --enable-gnutls --enable-frei0r --enable-openssl --enable-libass --enable-libopus --enable-fontconfig --enable-libdc1394 --disable-altivec --disable-armv5te --disable  libavutil      51. 73.101 / 51. 73.101
  libavcodec     54. 59.100 / 54. 59.100
  libavformat    54. 29.104 / 54. 29.104
  libavdevice    54.  2.101 / 54.  2.101
  libavfilter     3. 17.100 /  3. 17.100
  libswscale      2.  1.101 /  2.  1.101
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'quicktime.mov':
  Metadata:
    major_brand     : qt  
    minor_version   : 537199360
    compatible_brands: qt  
    creation_time   : 2012-10-23 08:59:57
  Duration: 01:07:41.43, start: 0.039000, bitrate: 599 kb/s
    Stream #0:0(eng): Video: png (png  / 0x20676E70), rgb24, 1020x553, 4149 kb/s, 15 fps, 15 tbr, 600 tbn, 600 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Audio: aac (mp4a / 0x6134706D), 44100 Hz, stereo, s16, 125 kb/s
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:2(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 318x240, 381 kb/s, 25 fps, 25 tbr, 1k tbn, 2k tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:3(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 1024x768, 86 kb/s, 12 fps, 12 tbr, 600 tbn, 1200 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
Frame changed from size:0x0 to size:318x240
quicktime.mov: error while seeking14KB vq=    0KB sq=    0B f=0/0   f=0/0   
   1.94 A-V:  0.232 fd=   2 aq=    0KB vq=    0KB sq=    0B f=0/0   

Immediately after start, I pressed on the curesor right key, which resulted in the "error while seeking" message. You can repeat this multiple times, and it will always print the message. The file is from the URL mentioned above.

Edit: right key, not left

Last edited 13 years ago by gjdfgh (previous) (diff)

comment:5 by Carl Eugen Hoyos, 13 years ago

Does seeking work for you with ffmpeg? It fails horribly here, but perhaps you tested differently?

comment:6 by gjdfgh, 13 years ago

This seems to work fine, but maybe it's because it somehow selects different streams:

ffmpeg -i quicktime.mov -ss 30 out.mov

comment:7 by Carl Eugen Hoyos, 13 years ago

Your command line does no seeking...

comment:8 by Carl Eugen Hoyos, 13 years ago

Reproduced by developer: set
Status: reopenedopen

The following command lines produce output files that are horribly out-of-sync (video starts correctly at ~0:60, audio starts from 0:00)

$ ffmpeg -ss 60 -i quicktime.mov -map 0:1 -map 0:2 -qscale 2 -t 30 out.avi
ffmpeg version N-49527-g985e93a Copyright (c) 2000-2013 the FFmpeg developers
  built on Feb  2 2013 00:17:41 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 17.100 / 52. 17.100
  libavcodec     54. 91.100 / 54. 91.100
  libavformat    54. 61.104 / 54. 61.104
  libavdevice    54.  3.103 / 54.  3.103
  libavfilter     3. 35.100 /  3. 35.100
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'quicktime.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2012-10-23 08:59:57
  Duration: 01:07:41.43, start: 0.039000, bitrate: 599 kb/s
    Stream #0:0(eng): Video: png (png  / 0x20676E70), rgb24, 1020x553 [SAR 72:72 DAR 1020:553], 4149 kb/s, 15 fps, 15 tbr, 600 tbn, 600 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Audio: aac (mp4a / 0x6134706D), 44100 Hz, stereo, fltp, 125 kb/s
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:2(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 318x240, 381 kb/s, 25 fps, 25 tbr, 1k tbn, 2k tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:3(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 1024x768, 86 kb/s, 12 fps, 12 tbr, 600 tbn, 1200 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    ISFT            : Lavf54.61.104
    Stream #0:0(eng): Audio: ac3 ([0] [0][0] / 0x2000), 44100 Hz, stereo, fltp, 192 kb/s
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 318x240, q=2-31, 200 kb/s, 25 tbn, 25 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
Stream mapping:
  Stream #0:1 -> #0:0 (aac -> ac3)
  Stream #0:2 -> #0:1 (h264 -> mpeg4)
Press [q] to stop, [?] for help
frame=  750 fps=0.0 q=2.0 Lsize=    4443kB time=00:00:30.02 bitrate=1212.2kbits/s dup=0 drop=1496
video:2245kB audio:2109kB subtitle:0 global headers:0kB muxing overhead 2.025536%
$ ffmpeg -ss 60 -i quicktime.mov -map 0:1 -map 0:3 -qscale 2 -t 30 out.avi
ffmpeg version N-49527-g985e93a Copyright (c) 2000-2013 the FFmpeg developers
  built on Feb  2 2013 00:17:41 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 17.100 / 52. 17.100
  libavcodec     54. 91.100 / 54. 91.100
  libavformat    54. 61.104 / 54. 61.104
  libavdevice    54.  3.103 / 54.  3.103
  libavfilter     3. 35.100 /  3. 35.100
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'quicktime.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2012-10-23 08:59:57
  Duration: 01:07:41.43, start: 0.039000, bitrate: 599 kb/s
    Stream #0:0(eng): Video: png (png  / 0x20676E70), rgb24, 1020x553 [SAR 72:72 DAR 1020:553], 4149 kb/s, 15 fps, 15 tbr, 600 tbn, 600 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Audio: aac (mp4a / 0x6134706D), 44100 Hz, stereo, fltp, 125 kb/s
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:2(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 318x240, 381 kb/s, 25 fps, 25 tbr, 1k tbn, 2k tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:3(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 1024x768, 86 kb/s, 12 fps, 12 tbr, 600 tbn, 1200 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    ISFT            : Lavf54.61.104
    Stream #0:0(eng): Audio: ac3 ([0] [0][0] / 0x2000), 44100 Hz, stereo, fltp, 192 kb/s
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 1024x768, q=2-31, 200 kb/s, 12 tbn, 12 tbc
    Metadata:
      creation_time   : 2012-10-23 08:59:57
      handler_name    : Apple Alias Data Handler
Stream mapping:
  Stream #0:1 -> #0:0 (aac -> ac3)
  Stream #0:3 -> #0:1 (h264 -> mpeg4)
Press [q] to stop, [?] for help
frame=  360 fps=0.0 q=2.0 Lsize=    3093kB time=00:00:30.02 bitrate= 844.0kbits/s dup=0 drop=719
video:905kB audio:2109kB subtitle:0 global headers:0kB muxing overhead 2.618949%

comment:9 by Michael Niedermayer, 11 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.